# terminal49

./: .env.example  .gitignore  .pre-commit-config.yaml  BIGQUERY_FIELD_EXTRACTION_FIX.md  BIGQUERY_TABLES_POPULATION_STATUS.md  CLAUDE.md  DEVELOPMENT_PLAN.md  PHASE4_COMPLETION_SUMMARY.md  ProjectBrief.md  README.md  SETUP.md  pyproject.toml  requirements.txt
docs/: API_DOCUMENTATION.md  BIGQUERY_ANALYTICS_IMPLEMENTATION_PLAN.md  BIGQUERY_ANALYTICS_IMPLEMENTATION_SUMMARY.md  DEVELOPMENT_PLAN_APPENDIX.md  PHASE1_COMPLETION_SUMMARY.md  PHASE2_COMPLETION_SUMMARY.md  PHASE2_DEPLOYMENT.md  PHASE3_COMPLETION_SUMMARY.md  PHASE3_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  create_webhook.md  delete_webhook.md  edit_containers.md  edit_webhook.md  edti_tracking_requests.md  get_a_shipment.md  get_container_map.md  get_containers.md  get_vessel_by_imo.md  list_containers.md  list_tracking_requests.md  list_webhook.md  list_webhook_notification.md  refresh_containers.md  resume_tracking_a_shipment.md  start_here.md  vessel_position_plan.md
docs/dashboard_documentation/: dashboard_queries.md  database_architecture_summary.md  implementation_guide.md
docs/runbooks/: OPERATIONAL_RUNBOOKS.md
docs/t49_api_docs/: edit_a_shipment.md  get_a_single_tracking_requests.md  get_container_raw_event.md  get_single_webhook.md  get_single_webhook_notification.md  get_vessel_by_id.md  get_vessel_future_position.md  get_vessel_future_position_from_coordinates.md  how_to_receive_status_updates.md  list_shipments.md  list_your_shipments_and_containers.md  quick_start.md  stop_tracking_a_shipment.md  tracking_shipments_and_containers.md  webhooks.md
functions/event_processor/: README.md  bigquery_archiver.py  database.py  database_operations.py  main.py  requirements.txt  transformers.py
functions/supabase_archiver/: README.md  main.py  requirements.txt
functions/webhook_receiver/: README.md  main.py  pubsub_publisher.py  requirements.txt  webhook_validator.py
infrastructure/: BIGQUERY_SCHEMA_ALIGNMENT.md
infrastructure/database/: 002_tracking_summary_rpc.sql  DATABASE_SELECTION.md  bigquery_schema.sql  supabase_schema.sql
infrastructure/gcp/: PROJECT_SETUP.md
infrastructure/terraform/: README.md  main.tf  terraform.tfvars.example  tfplan  variables.tf
infrastructure/terraform/modules/bigquery/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/cloud_function/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/monitoring/: dashboards.tf  main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/pubsub/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/service_accounts/: main.tf  outputs.tf  variables.tf
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
supabase/migrations/: 20260209114049_function.sql  20260223113412_get_active_vessel_enhancement.sql  20260224000000_add_composite_index_container_events.sql  20260226000000_teu_dashboard_rpcs.sql  20260303200927_fix_transshipment_array_types.sql  20260303202714_add_etd_range_filter.sql  20260312000000_optimize_tracking_summary_rpc.sql  20260317000000_vessel_summary_keyset_pagination.sql  20260318000000_shipment_operational_rpcs.sql  20260319000000_vessel_filter_rpcs.sql  20260319000001_t49_vessel_id_filter.sql
tests/integration/: test_event_processor.py  test_webhook_receiver.py
tests/unit/: test_database_operations.py  test_transformers.py  test_webhook_validator.py
